--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,11 @@
     "type": "cakephp-plugin",
     "require": {
         "php": ">=5.4.16",
-        "cakephp/cakephp": "~3.0"
+        "cakephp/cakephp": "~3.0",
+		"opauth/opauth": "*",
+		"opauth/facebook": "*",
+		"opauth/google": "*",
+		"opauth/twitter": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "*"
