--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "takashi-moripower/cake-opauth",
     "description": "CakeOpauth plugin for CakePHP",
     "type": "cakephp-plugin",
+	"license": "proprietary",
     "require": {
         "php": ">=5.4.16",
         "cakephp/cakephp": "~3.0",
